<resources>
    <string name="app_name">Home_Shift_App</string>

    <string name="Weshift">We Shift</string>
    <string name="loginemail">Email</string>
    <string name="loginpass">Password</string>
    <string name="loginbut">Login</string>
    <string name="createnewone">No acount Yet? Creat one</string>
    <string name="signname">Name</string>
    <string name="signupp">Signup</string>

    <string name="picckupp">Pickup</string>
    <string name="dropoff">Drop off</string>
    <string name="donnee">Done</string>
    <string name="minnitruck">Mini Truck</string>
    <string name="truckk">Truck</string>

    <string name="labour2">2 Labours</string>
    <string name="labour5">5 Labours</string>
    <string name="labour10">10 Labours</string>
    <string name="title_activity_maps">Map</string>
</resources>
