<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity"
    android:layout_weight="1">

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/logooo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/loginemail"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/loginpass"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/Passwrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        />


    <Button
        android:id="@+id/Loginbut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginbut"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/createone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createnewone"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAlignment="center"/>
</LinearLayout>